<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".settings.view.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/secondary_color"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/title_settings"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/main_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardSetting"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_color">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:cardBackgroundColor="@color/secondary_color"
                app:cardCornerRadius="20dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    app:srcCompat="@drawable/baseline_location_on_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:padding="10dp"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


                <RadioGroup
                    android:id="@+id/locationGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp">

                    <RadioButton
                        android:id="@+id/gpsLocation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/gps"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/mapLocation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/map"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </RadioGroup>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:cardBackgroundColor="@color/secondary_color"
                app:cardCornerRadius="20dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardLocation">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    app:srcCompat="@drawable/baseline_language_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:padding="10dp"
                    android:text="@string/language"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


                <RadioGroup
                    android:id="@+id/languageGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp">

                    <RadioButton
                        android:id="@+id/arabicLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/arabic"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/englishLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/english"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </RadioGroup>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:cardBackgroundColor="@color/secondary_color"
                app:cardCornerRadius="20dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardLanguage">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    app:srcCompat="@drawable/baseline_thermostat_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:padding="10dp"
                    android:text="@string/temperature"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


                <RadioGroup
                    android:id="@+id/temperatureGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp">

                    <RadioButton
                        android:id="@+id/celsiusTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/celsius"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/kelvinTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/kelvin"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/fahrenheitTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/fahrenheit"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </RadioGroup>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:cardBackgroundColor="@color/secondary_color"
                app:cardCornerRadius="20dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardTemperature">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    app:srcCompat="@drawable/baseline_shutter_speed_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:padding="10dp"
                    android:text="@string/wind_speed"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


                <RadioGroup
                    android:id="@+id/windGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp">

                    <RadioButton
                        android:id="@+id/meterWind"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/meter_sec"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/mileWind"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/mile_hour"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </RadioGroup>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:cardBackgroundColor="@color/secondary_color"
                app:cardCornerRadius="20dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardSpeed">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    app:srcCompat="@drawable/baseline_notifications_active_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:padding="10dp"
                    android:text="@string/notifications"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


                <RadioGroup
                    android:id="@+id/notificationGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp">

                    <RadioButton
                        android:id="@+id/enableNotification"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/enable"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/disableNotification"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/disable"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </RadioGroup>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:cardBackgroundColor="@color/secondary_color"
                app:cardCornerRadius="20dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardNotification">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    app:srcCompat="@drawable/baseline_light_mode_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:padding="10dp"
                    android:text="@string/theme"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


                <RadioGroup
                    android:id="@+id/themeGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp">

                    <RadioButton
                        android:id="@+id/lightTheme"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/light"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/darkTheme"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/dark"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </RadioGroup>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ripple_button"
                android:text="@string/save"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardTheme" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:backgroundTint="@color/main_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnSave" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>